--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
     >
       Ready to take your web development skills to the next level? Sign up for
       Robo Teach and start your learning journey today! Visit our website at
-      <a href="https://www.roboteach.com" target="_blank"
-        >https://bugdevta.github.io/roboTeach/</a
+      <a href="https://bugdevta.github.io/roboTeach/" target="_blank"
+        >Robo Teach</a
       >
       <br /><br />
       Keep visiting our website for the latest updates, tips, and resources!
